<resources>
    <string name="app_name">Chat Application</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="password_hint">Пароль</string>
    <string name="login_button_text">Войти</string>
    <string name="reg_button_text">Зарегестрироваться</string>
    <string name="reg_to_login_button_text">Уже есть аккаунт?</string>
    <string name="login_to_reg_button_text">Нет аккаунта?</string>
    <string name="login_hint_text">Имя пользователя</string>
    <string name="img_button_text">Выбрать\n фото</string>
</resources>